// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render correctly 1`] = `
<button
  className="btn  warning"
>
  <i
    className="icon icon-search"
  />
  Click
</button>
`;

exports[`Button renders primary style 1`] = `
<button
  className="btn primary "
>
  Click
</button>
`;

exports[`Button renders warning style 1`] = `
<button
  className="btn  warning"
>
  Click
</button>
`;

exports[`Button renders with icon 1`] = `
<button
  className="btn  "
>
  <i
    className="icon icon-search"
  />
  Click
</button>
`;
